plone-k3s-deployment/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plone
  labels:
    name: plone
